rds_resource_pg/main.tf

provider "aws" {
  region = var.region
}

data "aws_availability_zones" "available" {}

module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "3.2.0"

  name                 = "vpc-pg-devl"
  cidr                 = "10.0.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
  enable_dns_hostnames = true
  enable_dns_support   = true
}

resource "aws_db_subnet_group" "dgp-pg-devl-subnet" {
  name       = "dgp-pg-devl-subnet"
  subnet_ids = module.vpc.public_subnets

  tags = {
    Name = "dgp-pg-devl-subnet"
  }
}

resource "aws_security_group" "dgp-pg-devl-sec-group" {
  name   = "dgp-pg-devl-sec-group"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "dgp-pg-devl-sec-group"
  }
}

resource "aws_db_parameter_group" "dgp-pg-devl-param-group" {
  name   = "dgp-pg-devl-param-group"
  family = "postgres13"

  parameter {
    name  = "log_connections"
    value = "1"
  }
}

resource "aws_db_instance" "dgp-pg-devl-db" {
  identifier             = "dgp-pg-devl-db"
  instance_class         = "db.t3.large"
  allocated_storage      = 10
  engine                 = "postgres"
  engine_version         = "13.1"
  username               = "dogooddevl"
  password               = var.db_password
  db_subnet_group_name   = aws_db_subnet_group.dgp-pg-devl-subnet.name
  vpc_security_group_ids = [aws_security_group.dgp-pg-devl-sec-group.id]
  parameter_group_name   = aws_db_parameter_group.dgp-pg-devl-param-group.name
  publicly_accessible    = true
  skip_final_snapshot    = true
}
